# misis2024s-21-03-khlobustova-s-m

./: .gitignore  CMakeLists.txt  README.md  input_layout1.txt  status.md  Хлобустова_Светлана_БПМ_21_3.txt
prj.cw/: CMakeLists.txt  prj_qr.cpp
prj.cw/input/: input_layout2.txt
prj.cw/output/: layout_data1.txt  layout_data2.txt  src_data2.txt  src_data4.txt
prj.lab/: CMakeLists.txt  lab1.cpp
prj.lab/lab01/: CMakeLists.txt  doc_01.md
prj.lab/lab02/: CMakeLists.txt  doc_02.md  lab02.cpp
prj.lab/lab03/: CMakeLists.txt  doc_03.md  lab03.cpp
prj.lab/lab04/: CMakeLists.txt  doc_04.md  lab04.cpp
prj.lab/lab05/: CMakeLists.txt  doc_05.md  lab05.cpp
prj.lab/lab06/: CMakeLists.txt  doc_06.md  lab06.cpp
prj.lab/lab07/: CMakeLists.txt  doc_07.md  lab07.cpp
prj.lab/lab08/: CMakeLists.txt  doc_08.md  lab08.cpp
prj.lab/lab09/: CMakeLists.txt  doc_09.md  lab09.cpp
